@@ -2,6 +2,7 @@ OpenLDAP 2.2 Change Log
 
 OpenLDAP 2.2.27 Engineering
 	Fixed back-ldap/back-meta debug output of NULL strings (ITS#3698)
+	Fixed back-meta sizelimit bug (ITS#3720)
 	Fixed syncrepl runqueue (ITS#3542)
 	Fixed ACL val default style parsing crasher (ITS#3700)
 	Build Environment
